--- a/index.html
+++ b/index.html
@@ -177,6 +177,41 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="widget">
+               <h3>About Launch <span>.</span></h3>
+               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+               <div class="connect">
+                 <h3>Connect</h3>
+                  <ul>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
+                  </ul>
+               </div>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="projects">
+               <h3>Projects</h3>
+               <ul>
+                <li><a href="#">La Lega Stadium</a></li>
+                <li><a href="#">France Building</a></li>
+                <li><a href="#">22 New Homes</a></li>
+                <li><a href="#">Manage Center</a></li>
+                <li><a href="#">Sports Hall</a></li>
+               </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
