home section and footer code add

--- a/index.html
+++ b/index.html
@@ -118,12 +118,14 @@
       </section>
       <section id="feat-page">
         <div class="container">
-          <div class="row" style="justify-content: space-between;">
+          <div class="row" style="justify-content: space-between">
             <div class="col-lg-4">
               <div class="feat-text">
-                <span  data-aos="fade-up" class="digital-ser">Digital Services</span>
+                <span data-aos="fade-up" class="digital-ser"
+                  >Digital Services</span
+                >
                 <h3 data-aos="fade-up">Selling Digital Services</h3>
-                <div  data-aos="fade-up" class="far-away">
+                <div data-aos="fade-up" class="far-away">
                   <p>
                     Far far away, behind the word mountains, far from the
                     countries Vokalia and Consonantia, there live the blind
@@ -141,7 +143,7 @@
                     </li>
                   </ul>
                 </div>
-                <div  data-aos="fade-up" class="separated">
+                <div data-aos="fade-up" class="separated">
                   <h4>
                     “Separated they
                     <span class="live-in-book"
@@ -164,9 +166,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-7"  data-aos="fade-up">
+            <div class="col-lg-7" data-aos="fade-up">
               <div class="dashboard">
-                <img src="https://preview.colorlib.com/theme/launch/images/dashboard.jpg.webp" alt="dahboard-img" />
+                <img
+                  src="https://preview.colorlib.com/theme/launch/images/dashboard.jpg.webp"
+                  alt="dahboard-img"
+                />
                 <p class="play-button">
                   <i class="fa-solid fa-play"></i>
                 </p>
@@ -182,31 +187,76 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="widget">
-               <h3>About Launch <span>.</span></h3>
-               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-               <div class="connect">
-                 <h3>Connect</h3>
-                  <ul>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-dribbble"></i></a></li>
-                  </ul>
-               </div>
+              <h3>About Launch <span>.</span></h3>
+              <p>
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts.
+              </p>
+              <div class="connect">
+                <h3>Connect</h3>
+                <ul>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2" style="margin-left: auto">
             <div class="projects">
-               <h3>Projects</h3>
-               <ul>
+              <h3>Projects</h3>
+              <ul>
                 <li><a href="#">La Lega Stadium</a></li>
                 <li><a href="#">France Building</a></li>
                 <li><a href="#">22 New Homes</a></li>
                 <li><a href="#">Manage Center</a></li>
                 <li><a href="#">Sports Hall</a></li>
-               </ul>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-2" style="margin-left: auto">
+            <div class="projects">
+              <h3>Services</h3>
+              <ul>
+                <li><a href="#">Architect</a></li>
+                <li><a href="#">Interior Design</a></li>
+                <li><a href="#">Landscape Design</a></li>
+                <li><a href="#">Consultancy</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3" style="margin-left: auto">
+            <div class="projects">
+              <h3>Contact</h3>
+              <ul>
+                <li><a href="#">43 Raymouth Rd. Baltemoer, London 3910</a></li>
+                <li><a href="#">+1(123)-456-7890</a></li>
+                <li><a href="#">+1(123)-456-7890</a></li>
+                <li><a href="#">info@mydomain.com</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-12">
+            <div class="copyright">
+              <p>
+                Copyright ©2025 All rights reserved | This template is made with
+                <i class="fa-solid fa-heart"></i> by <a href="#">Colorlib</a>
+              </p>
             </div>
           </div>
         </div>
