testimional pricing services sections add

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <!-- Owl Carousel CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
@@ -38,7 +48,7 @@
                   </a>
                   <ul class="sub-menu1">
                     <li class="testim-page">
-                      <a class="testi-link" href="#">Testimional</a>
+                      <a class="testi-link" href="#testim-section">Testimional</a>
                     </li>
                     <li class="menu2-page">
                       <a class="menu2-link" href="#"
@@ -65,7 +75,7 @@
                   <a class="features-link" href="#feat-page">Features</a>
                 </li>
                 <li class="pric-page">
-                  <a class="pricing-link" href="#">Pricing</a>
+                  <a class="pricing-link" href="#pricing-sec">Pricing</a>
                 </li>
                 <li class="about-page">
                   <a class="about-link" href="#">About</a>
@@ -181,6 +191,273 @@
           </div>
         </div>
       </section>
+      <section id="service-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="service">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <h3>Grow Your Business</h3>
+                <p class="serv-info">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="service">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <h3>Grow Your Business</h3>
+                <p class="serv-info">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="service">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <h3>Grow Your Business</h3>
+                <p class="serv-info">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="service">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <h3>Grow Your Business</h3>
+                <p class="serv-info">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="pricing-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="pricing-desc">
+                <h2>Pricing</h2>
+                <p>Pricing for everyone. Choose your plan now!</p>
+              </div>
+            </div>
+            <div class="col-lg-4 pd-right_left">
+              <div class="pricing-card">
+                <div class="price">
+                  <span class="type">Free</span>
+                  <span class="price-numb"><sup>$</sup>0</span>
+                </div>
+                <ul class="checked">
+                  <li>
+                    <i class="bi bi-check2"></i>There live the blind texts
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far far away behind the word
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far from the countries Vokalia
+                    and Consonantia
+                  </li>
+                </ul>
+                <p class="get-started"><a href="#">Get Started</a></p>
+              </div>
+            </div>
+            <div class="col-lg-4 pd-right_left">
+              <div class="pricing-card">
+                <div class="price">
+                  <span class="type">Free</span>
+                  <span class="price-numb"><sup>$</sup>0</span>
+                </div>
+                <ul class="checked">
+                  <li>
+                    <i class="bi bi-check2"></i>There live the blind texts
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far far away behind the word
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far from the countries Vokalia
+                    and Consonantia
+                  </li>
+                </ul>
+                <p class="get-started2"><a href="#">Get Started</a></p>
+              </div>
+            </div>
+            <div class="col-lg-4 pd-right_left">
+              <div class="pricing-card">
+                <div class="price">
+                  <span class="type">Free</span>
+                  <span class="price-numb"><sup>$</sup>0</span>
+                </div>
+                <ul class="checked">
+                  <li>
+                    <i class="bi bi-check2"></i>There live the blind texts
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far far away behind the word
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far from the countries Vokalia
+                    and Consonantia
+                  </li>
+                </ul>
+                <p class="get-started"><a href="#">Get Started</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="advantage-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="advantage-desc">
+                <h2>Advantage of using our products</h2>
+                <p>Far from the countries Vokalia and Consonantia</p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="service-horizon">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="contents">
+                  <h3>Grow Your Business</h3>
+                  <p class="serv-info">
+                    Far far away, behind the word mountains, far from the
+                    countries Vokalia and Consonantia, there live the blind
+                    texts.
+                  </p>
+                  <p class="serv-before">
+                    <a class="read-more" href="#">Learn More</a>
+                    <span class="line"></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="service-horizon">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="contents">
+                  <h3>Grow Your Business</h3>
+                  <p class="serv-info">
+                    Far far away, behind the word mountains, far from the
+                    countries Vokalia and Consonantia, there live the blind
+                    texts.
+                  </p>
+                  <p class="serv-before">
+                    <a class="read-more" href="#">Learn More</a>
+                    <span class="line"></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="service-horizon">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="contents">
+                  <h3>Grow Your Business</h3>
+                  <p class="serv-info">
+                    Far far away, behind the word mountains, far from the
+                    countries Vokalia and Consonantia, there live the blind
+                    texts.
+                  </p>
+                  <p class="serv-before">
+                    <a class="read-more" href="#">Learn More</a>
+                    <span class="line"></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="service-horizon">
+                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="contents">
+                  <h3>Grow Your Business</h3>
+                  <p class="serv-info">
+                    Far far away, behind the word mountains, far from the
+                    countries Vokalia and Consonantia, there live the blind
+                    texts.
+                  </p>
+                  <p class="serv-before">
+                    <a class="read-more" href="#">Learn More</a>
+                    <span class="line"></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="testim-section" class="testimonials-section" >
+        <div class="container">
+          <div class="slider-layout">
+            <div class="left-side">
+              <span class="subtitle">TESTIMONIALS</span>
+              <h2>Our Customers Feedback</h2>
+              <div class="custom-nav">
+                <button class="custom-prev">←</button>
+                <button class="custom-next">→</button>
+              </div>
+            </div>
+            <div class="right-side">
+              <div class="owl-carousel testimonials-carousel">
+                <div class="testimonial-item">
+                  <p class="quote">
+                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                  </p>
+                  <div class="author">
+                    <img
+                      src="https://preview.colorlib.com/theme/launch/images/person_1.jpg.webp"
+                      alt="User"
+                      class="author-img"
+                    />
+                    <div class="author-name">
+                      <p class="name">James Anderson</p>
+                      <p class="mission">Facebook, Product Lead</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-item">
+                  <p class="quote">
+                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                  </p>
+                  <div class="author">
+                    <img
+                      src="https://preview.colorlib.com/theme/launch/images/person_2.jpg.webp"
+                      alt="User"
+                      class="author-img"
+                    />
+                    <div class="author-name">
+                      <p class="name">James Anderson</p>
+                      <p class="mission">Facebook, Product Lead</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonial-item">
+                  <p class="quote">
+                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                  </p>
+                  <div class="author">
+                    <img
+                      src="https://preview.colorlib.com/theme/launch/images/person_3.jpg.webp"
+                      alt="User"
+                      class="author-img"
+                    />
+                    <div class="author-name">
+                      <p class="name">James Anderson</p>
+                      <p class="mission">Facebook, Product Lead</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container">
@@ -263,6 +540,12 @@
       </div>
     </footer>
     <script src="./app.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Owl Carousel JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    z
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
@@ -281,6 +564,25 @@
         delay: 50,
         duration: 1000,
         easing: "ease-in-out",
+      });
+
+      $(document).ready(function () {
+        const owl = $(".testimonials-carousel");
+        owl.owlCarousel({
+          items: 2,
+          loop: true,
+          margin: 25,
+          dots: true,
+          nav: false,
+        });
+
+        $(".custom-prev").click(function () {
+          owl.trigger("prev.owl.carousel");
+        });
+
+        $(".custom-next").click(function () {
+          owl.trigger("next.owl.carousel");
+        });
       });
     </script>
   </body>
