--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </p>
                 <div class="btn-groups" data-aos="fade-up">
                   <p class="see-feat"><a href="#feat-page">See Features</a></p>
-                  <p class="pricing-btn"><a href="#">Pricing</a></p>
+                  <p class="pricing-btn"><a href="#pricing-sec">Pricing</a></p>
                 </div>
               </div>
             </div>
