--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                   </a>
                   <ul class="sub-menu1">
                     <li class="testim-page">
-                      <a class="testi-link" href="#testim-section">Testimional</a>
+                      <a class="testi-link" href="#testim-section"
+                        >Testimional</a
+                      >
                     </li>
                     <li class="menu2-page">
                       <a class="menu2-link" href="#"
@@ -81,7 +83,7 @@
                   <a class="about-link" href="#">About</a>
                 </li>
                 <li class="contact-page">
-                  <a class="contact-link" href="#">Contact</a>
+                  <a class="contact-link" href="#contact-sec">Contact</a>
                 </li>
               </ul>
             </div>
@@ -392,7 +394,7 @@
           </div>
         </div>
       </section>
-      <section id="testim-section" class="testimonials-section" >
+      <section id="testim-section" class="testimonials-section">
         <div class="container">
           <div class="slider-layout">
             <div class="left-side">
@@ -407,7 +409,13 @@
               <div class="owl-carousel testimonials-carousel">
                 <div class="testimonial-item">
                   <p class="quote">
-                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                    “Separated they
+                    <span
+                      >live in Bookmarksgrove right at the coast of the
+                      Semantics</span
+                    >, a large language ocean. A small river named Duden flows
+                    by their place and supplies it with the necessary
+                    regelialia. ”
                   </p>
                   <div class="author">
                     <img
@@ -423,7 +431,13 @@
                 </div>
                 <div class="testimonial-item">
                   <p class="quote">
-                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                    “Separated they
+                    <span
+                      >live in Bookmarksgrove right at the coast of the
+                      Semantics</span
+                    >, a large language ocean. A small river named Duden flows
+                    by their place and supplies it with the necessary
+                    regelialia. ”
                   </p>
                   <div class="author">
                     <img
@@ -439,7 +453,13 @@
                 </div>
                 <div class="testimonial-item">
                   <p class="quote">
-                    “Separated they <span>live in Bookmarksgrove right at the coast of the Semantics</span>, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. ”
+                    “Separated they
+                    <span
+                      >live in Bookmarksgrove right at the coast of the
+                      Semantics</span
+                    >, a large language ocean. A small river named Duden flows
+                    by their place and supplies it with the necessary
+                    regelialia. ”
                   </p>
                   <div class="author">
                     <img
@@ -453,6 +473,59 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contact-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="get-in-touch">
+                <h2>Get In Touch</h2>
+                <p>Far from the countries Vokalia and Consonantia</p>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <div class="contact-form">
+                <form>
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <div class="first_name">
+                        <label>First name</label>
+                        <input class="name" type="text" />
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="last_name">
+                        <label>Last name</label>
+                        <input class="surname" type="text" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="email">
+                    <label>Eamil</label>
+                    <input class="email-inp" type="text">
+                  </div>
+                  <div class="message">
+                    <label>Message</label>
+                    <textarea cols="30" rows="5"></textarea>
+                  </div>
+                  <button class="btn btn-primary" type="submit">Send Messasge</button>
+                </form>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="contact-info">
+                <h3>Contact Info</h3>
+                <ul class="contact-list">
+                  <li><i class="fa-solid fa-location-dot"></i> 43 Raymouth Rd. Baltemoer, London 3910</li>
+                  <li><i class="fa-solid fa-phone"></i> +1(123)-456-7890</li>
+                  <li><i class="fa-solid fa-phone"></i> +1(123)-456-7890</li>
+                  <li><i class="fa-solid fa-envelope"></i> info@mydomain.com</li>
+                  <li><i class="fa-solid fa-earth-asia"></i> https://Colorlib.com/</li>
+                </ul>
               </div>
             </div>
           </div>
