about and news section code add

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <a class="home-link" href="#home-page">Home</a>
                 </li>
                 <li class="drop-page">
-                  <a class="drop-link" href="#"
+                  <a class="drop-link" href="#home-page"
                     >Dropdown
                     <i class="bi bi-chevron-down"></i>
                   </a>
@@ -80,7 +80,7 @@
                   <a class="pricing-link" href="#pricing-sec">Pricing</a>
                 </li>
                 <li class="about-page">
-                  <a class="about-link" href="#">About</a>
+                  <a class="about-link" href="#about-sec">About</a>
                 </li>
                 <li class="contact-page">
                   <a class="contact-link" href="#contact-sec">Contact</a>
@@ -478,6 +478,147 @@
           </div>
         </div>
       </section>
+      <section id="about-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="about-img">
+                <img
+                  src="https://preview.colorlib.com/theme/launch/images/about.svg"
+                  alt="about-img"
+                />
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="about-text">
+                <span class="head">About</span>
+                <h2>About Us</h2>
+                <p>
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                  Separated they live in Bookmarksgrove right at the coast
+                </p>
+                <p>
+                  Separated they
+                  <span class="highlights"
+                    >live in Bookmarksgrove right at the coast of the
+                    Semantics</span
+                  >, a large language ocean. A small river named Duden flows by
+                  their place and supplies it with the necessary regelialia.
+                </p>
+                <ul class="list">
+                  <li><i class="bi bi-check2"></i>There live the blind texts</li>
+                  <li><i class="bi bi-check2"></i>Far far away behind the word</li>
+                  <li><i class="bi bi-check2"></i>Their place and supplies</li>
+                </ul>
+                <div class="count-numb">
+                  <div class="members-numb">
+                    <span class="number">59M</span>
+                    <span class="count-text">Members</span>
+                  </div>
+                  <div class="team-numb">
+                    <span class="number">14</span>
+                    <span class="count-text">Team</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="news">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="news-tittle">
+                <h2>Our News</h2>
+                <p>Far from the countries Vokalia and Consonantia</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="news-card">
+                <div class="author">
+                  <img
+                    src="https://preview.colorlib.com/theme/launch/images/person_1.jpg.webp"
+                    alt="author-img"
+                  />
+                  <div class="author-desc">
+                    <p class="name">Posted by James</p>
+                    <p class="date">Jun 14, 2020</p>
+                  </div>
+                </div>
+                <div class="news-content">
+                  <span>Digital Service, 4 min read</span>
+                  <h3>
+                    <a href="#"
+                      >Far far away behind the word mountains far from the
+                      countries</a
+                    >
+                  </h3>
+                  <div class="readMoreNews">
+                    <i class="bi bi-arrow-right"></i>
+                    <div class="square-back"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="news-card">
+                <div class="author">
+                  <img
+                    src="https://preview.colorlib.com/theme/launch/images/person_1.jpg.webp"
+                    alt="author-img"
+                  />
+                  <div class="author-desc">
+                    <p class="name">Posted by James</p>
+                    <p class="date">Jun 14, 2020</p>
+                  </div>
+                </div>
+                <div class="news-content">
+                  <span>Digital Service, 4 min read</span>
+                  <h3>
+                    <a href="#"
+                      >Far far away behind the word mountains far from the
+                      countries</a
+                    >
+                  </h3>
+                  <div class="readMoreNews">
+                    <i class="bi bi-arrow-right"></i>
+                    <div class="square-back"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="news-card">
+                <div class="author">
+                  <img
+                    src="https://preview.colorlib.com/theme/launch/images/person_1.jpg.webp"
+                    alt="author-img"
+                  />
+                  <div class="author-desc">
+                    <p class="name">Posted by James</p>
+                    <p class="date">Jun 14, 2020</p>
+                  </div>
+                </div>
+                <div class="news-content">
+                  <span>Digital Service, 4 min read</span>
+                  <h3>
+                    <a href="#"
+                      >Far far away behind the word mountains far from the
+                      countries</a
+                    >
+                  </h3>
+                  <div class="readMoreNews">
+                    <i class="bi bi-arrow-right"></i>
+                    <div class="square-back"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="contact-sec">
         <div class="container">
           <div class="row">
@@ -506,13 +647,15 @@
                   </div>
                   <div class="email">
                     <label>Eamil</label>
-                    <input class="email-inp" type="text">
+                    <input class="email-inp" type="text" />
                   </div>
                   <div class="message">
                     <label>Message</label>
                     <textarea cols="30" rows="5"></textarea>
                   </div>
-                  <button class="btn btn-primary" type="submit">Send Messasge</button>
+                  <button class="btn btn-primary" type="submit">
+                    Send Messasge
+                  </button>
                 </form>
               </div>
             </div>
@@ -520,11 +663,18 @@
               <div class="contact-info">
                 <h3>Contact Info</h3>
                 <ul class="contact-list">
-                  <li><i class="fa-solid fa-location-dot"></i> 43 Raymouth Rd. Baltemoer, London 3910</li>
+                  <li>
+                    <i class="fa-solid fa-location-dot"></i> 43 Raymouth Rd.
+                    Baltemoer, London 3910
+                  </li>
                   <li><i class="fa-solid fa-phone"></i> +1(123)-456-7890</li>
                   <li><i class="fa-solid fa-phone"></i> +1(123)-456-7890</li>
-                  <li><i class="fa-solid fa-envelope"></i> info@mydomain.com</li>
-                  <li><i class="fa-solid fa-earth-asia"></i> https://Colorlib.com/</li>
+                  <li>
+                    <i class="fa-solid fa-envelope"></i> info@mydomain.com
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-earth-asia"></i> https://Colorlib.com/
+                  </li>
                 </ul>
               </div>
             </div>
