--- a/index.html
+++ b/index.html
@@ -193,10 +193,65 @@
           </div>
         </div>
       </section>
+      <section id="dashboard-sec">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="dash-img">
+                <img
+                  src="https://preview.colorlib.com/theme/launch/images/dashboard.jpg.webp"
+                  alt="dash-img"
+                />
+                <span class="img-number">1/4</span>
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <div class="serv-group">
+                <div class="servbox bg-active" data-aos="fade-left">
+                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                  <div class="box-desc">
+                    <h3>Grow Your Business</h3>
+                    <p class="serv-info">
+                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
+                    </p>
+                  </div>
+                </div>
+                <div class="servbox" data-aos="fade-left" data-aos-duration="1200">
+                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                  <div class="box-desc">
+                    <h3>Grow Your Business</h3>
+                    <p class="serv-info">
+                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
+                    </p>
+                  </div>
+                </div>
+                <div class="servbox" data-aos="fade-left" data-aos-duration="10">
+                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                  <div class="box-desc">
+                    <h3>Grow Your Business</h3>
+                    <p class="serv-info">
+                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
+                    </p>
+                  </div>
+                </div>
+                <div class="servbox" data-aos="fade-left" data-aos-duration="1400">
+                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                  <div class="box-desc">
+                    <h3>Grow Your Business</h3>
+                    <p class="serv-info">
+                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="service-section">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3" data-aos="fade-up">
               <div class="service">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <h3>Grow Your Business</h3>
@@ -206,7 +261,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1200">
               <div class="service">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <h3>Grow Your Business</h3>
@@ -216,7 +271,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1300">
               <div class="service">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <h3>Grow Your Business</h3>
@@ -226,7 +281,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1400">
               <div class="service">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <h3>Grow Your Business</h3>
@@ -242,13 +297,13 @@
       <section id="pricing-sec">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12" data-aos="fade-up">
               <div class="pricing-desc">
                 <h2>Pricing</h2>
                 <p>Pricing for everyone. Choose your plan now!</p>
               </div>
             </div>
-            <div class="col-lg-4 pd-right_left">
+            <div class="col-lg-4 pd-right_left" data-aos="fade-up">
               <div class="pricing-card">
                 <div class="price">
                   <span class="type">Free</span>
@@ -269,7 +324,7 @@
                 <p class="get-started"><a href="#">Get Started</a></p>
               </div>
             </div>
-            <div class="col-lg-4 pd-right_left">
+            <div class="col-lg-4 pd-right_left" data-aos="fade-up" data-aos-duration="1200">
               <div class="pricing-card">
                 <div class="price">
                   <span class="type">Free</span>
@@ -290,7 +345,7 @@
                 <p class="get-started2"><a href="#">Get Started</a></p>
               </div>
             </div>
-            <div class="col-lg-4 pd-right_left">
+            <div class="col-lg-4 pd-right_left" data-aos="fade-up" data-aos-duration="1300">
               <div class="pricing-card">
                 <div class="price">
                   <span class="type">Free</span>
@@ -317,13 +372,13 @@
       <section id="advantage-sec">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12"  data-aos="fade-up">
               <div class="advantage-desc">
                 <h2>Advantage of using our products</h2>
                 <p>Far from the countries Vokalia and Consonantia</p>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <div class="contents">
@@ -340,7 +395,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <div class="contents">
@@ -357,7 +412,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <div class="contents">
@@ -374,7 +429,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
                 <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
                 <div class="contents">
@@ -397,7 +452,7 @@
       <section id="testim-section" class="testimonials-section">
         <div class="container">
           <div class="slider-layout">
-            <div class="left-side">
+            <div class="left-side"  data-aos="fade-up">
               <span class="subtitle">TESTIMONIALS</span>
               <h2>Our Customers Feedback</h2>
               <div class="custom-nav">
@@ -491,14 +546,14 @@
             </div>
             <div class="col-lg-4">
               <div class="about-text">
-                <span class="head">About</span>
-                <h2>About Us</h2>
-                <p>
+                <span class="head"  data-aos="fade-up">About</span>
+                <h2  data-aos="fade-up">About Us</h2>
+                <p  data-aos="fade-up">
                   Far far away, behind the word mountains, far from the
                   countries Vokalia and Consonantia, there live the blind texts.
                   Separated they live in Bookmarksgrove right at the coast
                 </p>
-                <p>
+                <p  data-aos="fade-up">
                   Separated they
                   <span class="highlights"
                     >live in Bookmarksgrove right at the coast of the
@@ -506,12 +561,16 @@
                   >, a large language ocean. A small river named Duden flows by
                   their place and supplies it with the necessary regelialia.
                 </p>
-                <ul class="list">
-                  <li><i class="bi bi-check2"></i>There live the blind texts</li>
-                  <li><i class="bi bi-check2"></i>Far far away behind the word</li>
+                <ul class="list"  data-aos="fade-up">
+                  <li>
+                    <i class="bi bi-check2"></i>There live the blind texts
+                  </li>
+                  <li>
+                    <i class="bi bi-check2"></i>Far far away behind the word
+                  </li>
                   <li><i class="bi bi-check2"></i>Their place and supplies</li>
                 </ul>
-                <div class="count-numb">
+                <div class="count-numb"  data-aos="fade-up">
                   <div class="members-numb">
                     <span class="number">59M</span>
                     <span class="count-text">Members</span>
@@ -529,13 +588,13 @@
       <section id="news">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12"  data-aos="fade-up">
               <div class="news-tittle">
                 <h2>Our News</h2>
                 <p>Far from the countries Vokalia and Consonantia</p>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4"  data-aos="fade-up">
               <div class="news-card">
                 <div class="author">
                   <img
@@ -562,7 +621,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4"  data-aos="fade-up" data-aos-duration="1300">
               <div class="news-card">
                 <div class="author">
                   <img
@@ -589,7 +648,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4"  data-aos="fade-up" data-aos-duration="1400">
               <div class="news-card">
                 <div class="author">
                   <img
@@ -622,13 +681,13 @@
       <section id="contact-sec">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12"  data-aos="fade-up">
               <div class="get-in-touch">
                 <h2>Get In Touch</h2>
                 <p>Far from the countries Vokalia and Consonantia</p>
               </div>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7"  data-aos="fade-up">
               <div class="contact-form">
                 <form>
                   <div class="row">
@@ -659,7 +718,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4"  data-aos="fade-up" data-aos-duration="1200">
               <div class="contact-info">
                 <h3>Contact Info</h3>
                 <ul class="contact-list">
