--- a/index.html
+++ b/index.html
@@ -26,9 +26,31 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css"/>
     <title>Launch WebSite HTML Template</title>
   </head>
   <body>
+    <header class="mobilNav">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="mobilNav-item">
+              <div class="page-logo">
+                <a href="/index.html">Launch<span>.</span> </a>
+              </div>
+              <div class="mobilMenu">
+                <i class="bi bi-list">
+                  <div class="rightMenu">
+                    <i class="bi bi-x-lg"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, tempora.</p>
+                  </div>
+                </i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <header class="desktopNav">
       <div class="container">
         <div class="row">
@@ -217,7 +239,7 @@
                   </div>
                 </div>
                 <div class="servbox" data-aos="fade-left" data-aos-duration="1200">
-                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                  <p class="serv-icon2"><i class="bi bi-arrow-repeat"></i></i></p>
                   <div class="box-desc">
                     <h3>Grow Your Business</h3>
                     <p class="serv-info">
@@ -225,8 +247,8 @@
                     </p>
                   </div>
                 </div>
-                <div class="servbox" data-aos="fade-left" data-aos-duration="10">
-                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="servbox" data-aos="fade-left" data-aos-duration="1300">
+                  <p class="serv-icon3"><i class="bi bi-briefcase"></i></p>
                   <div class="box-desc">
                     <h3>Grow Your Business</h3>
                     <p class="serv-info">
@@ -234,8 +256,8 @@
                     </p>
                   </div>
                 </div>
-                <div class="servbox" data-aos="fade-left" data-aos-duration="1400">
-                  <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <div class="servbox" data-aos="fade-left" data-aos-duration="1300">
+                  <p class="serv-icon4"><i class="bi bi-collection"></i></p>
                   <div class="box-desc">
                     <h3>Grow Your Business</h3>
                     <p class="serv-info">
@@ -263,7 +285,7 @@
             </div>
             <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1200">
               <div class="service">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon2"><i class="bi bi-arrow-repeat"></i></p>
                 <h3>Grow Your Business</h3>
                 <p class="serv-info">
                   Far far away, behind the word mountains, far from the
@@ -273,7 +295,7 @@
             </div>
             <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1300">
               <div class="service">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon3"><i class="bi bi-briefcase"></i></p>
                 <h3>Grow Your Business</h3>
                 <p class="serv-info">
                   Far far away, behind the word mountains, far from the
@@ -283,7 +305,7 @@
             </div>
             <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1400">
               <div class="service">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon4"><i class="bi bi-collection"></i></p>
                 <h3>Grow Your Business</h3>
                 <p class="serv-info">
                   Far far away, behind the word mountains, far from the
@@ -397,7 +419,7 @@
             </div>
             <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon2"><i class="bi bi-arrow-repeat"></i></p>
                 <div class="contents">
                   <h3>Grow Your Business</h3>
                   <p class="serv-info">
@@ -414,7 +436,7 @@
             </div>
             <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon3"><i class="bi bi-briefcase"></i></p>
                 <div class="contents">
                   <h3>Grow Your Business</h3>
                   <p class="serv-info">
@@ -431,7 +453,7 @@
             </div>
             <div class="col-lg-6"  data-aos="fade-up">
               <div class="service-horizon">
-                <p class="serv-icon"><i class="bi bi-app-indicator"></i></p>
+                <p class="serv-icon4"><i class="bi bi-collection"></i></p>
                 <div class="contents">
                   <h3>Grow Your Business</h3>
                   <p class="serv-info">
