modified responsive view

--- a/index.html
+++ b/index.html
@@ -36,9 +36,19 @@
               <i class="bi bi-list  openmenu">
                 <div class="rightMenu">
                   <p class="close-btn"><i class="bi bi-x-lg closemenu"></i></p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, tempora.</p>
+                  <ul class="list-text">
+                    <li><a class="mobilList-item" href="#">Home</a></li>
+                    <li><a class="mobilList-item" href="#">Dropdown</a></li>
+                    <li><a class="mobilList-item" href="#feat-page">Features</a></li>
+                    <li><a class="mobilList-item" href="#pricing-sec">Pricing</a></li>
+                    <li><a class="mobilList-item" href="#about-sec">About</a></li>
+                    <li><a class="mobilList-item" href="#contact-sec">Contact</a></li>
+                    <li>Sign in</li>
+                    <li>Register</li>
+                  </ul>
                 </div>
               </i>
+
             </div>
           </div>
         </div>
